Fix code-quality and performance report findings (#55)
Co-authored-by: Aki Nishikawa <Akihiro.Nishikawa@microsoft.com>